--- a/index.html
+++ b/index.html
@@ -14,17 +14,17 @@ quipamento<!DOCTYPE html>
     <header class="cabecalho">
         <img class="cabecalho-imagem" src="png-transparent-graphy-fishing-photography-logo-sports-thumbnail.png" alt="marcas">
         <ul class="cabecalho-lista">
-            <li class="cabecalho-lista-item">pesqueiro</li>
+            <li class="cabecalho-lista-item">agricultura</li>
             <li class="cabecalho-lista-item">Estudante</li>
         </ul>
     </header>
-    <section class="pesqueiro">
-        <div class="pesqueiro-div-conteudo">
-            <h2 class="pesqueiro-titulo">Sobre o pesqueiro</h2>
-            <p class="pesqueiro-texto-um">O pesqueiro do abraao foi fundada em 2010 e tem como objetivo ter os melhores produtos da região.</p>
-            <p class="pesqueiro-texto-dois">.temos os melhores equipamentos da região para vocẽs.somos super unidos,para te atender melhor, os melhores peixes da cidade estão aqui !</p>
+    <section class="agricultura">
+        <div class="agricultura-div-conteudo">
+            <h2 class="agricultura-titulo">Sobre o agricultura</h2>
+            <p class="agricultura-texto-um">O pesqueiro do abraao foi fundada em 2010 e tem como objetivo ter os melhores produtos da região.</p>
+            <p class="agricultura-texto-dois">.temos os melhores equipamentos da região para vocẽs.somos super unidos,para te atender melhor, os melhores peixes da cidade estão aqui !</p>
         </div>
-        <img class="pesqueiro-imagem" src="e88744efcded40b9b6510c2e92efe106.png" alt="imagem que representa um pesqueiro">
+        <img class="agricultura-imagem" src="e88744efcded40b9b6510c2e92efe106.png" alt="imagem que representa um pesqueiro">
     </section>
     <section class="produtos">
         <h2 class="produtos-titulo">Conheça nossos produtos?</h2>
