--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@ quipamento<!DOCTYPE html>
     <section class="agricultura">
         <div class="agricultura-div-conteudo">
             <h2 class="agricultura-titulo">Sobre o agricultura</h2>
-            <p class="agricultura-texto-um">O pesqueiro do abraao foi fundada em 2010 e tem como objetivo ter os melhores produtos da região.</p>
-            <p class="agricultura-texto-dois">.temos os melhores equipamentos da região para vocẽs.somos super unidos,para te atender melhor, os melhores peixes da cidade estão aqui !</p>
+            <p class="agricultura-texto-um">A agricultura é muito importante para a nossa vida porque é de lá que vem nossos alimentos.</p>
+            <p class="agricultura-texto-dois">.O Brasil é um dos maiores produtoresrurais do mundo !</p>
         </div>
         <img class="agricultura-imagem" src="e88744efcded40b9b6510c2e92efe106.png" alt="imagem que representa um pesqueiro">
     </section>
