--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ quipamento<!DOCTYPE html>
 </head>
 <body>
     <header class="cabecalho">
-        <img class="cabecalho-imagem" src="png-transparent-graphy-fishing-photography-logo-sports-thumbnail.png" alt="marcas">
+        <img class="cabecalho-imagem" src="Post para instagram dia da agricultura simples verde.png" alt="marcas">
         <ul class="cabecalho-lista">
             <li class="cabecalho-lista-item">agricultura</li>
             <li class="cabecalho-lista-item">Estudante</li>
