--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ quipamento<!DOCTYPE html>
     </div>
     </section>
     <footer class="rodape">
-        <img class="rodape-imagem"src="png-transparent-graphy-fishing-photography-logo-sports-thumbnail.png" alt="marcas">
+        <img class="rodape-imagem"src="Post para instagram dia da agricultura simples verde.png" alt="marcas">
     </footer>
 </body>
 </html>
