--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ quipamento<!DOCTYPE html>
             <p class="agricultura-texto-um">A agricultura é muito importante para a nossa vida porque é de lá que vem nossos alimentos.</p>
             <p class="agricultura-texto-dois">.O Brasil é um dos maiores produtoresrurais do mundo !</p>
         </div>
-        <img class="agricultura-imagem" src="png-transparent-farmer-drawing-cowboy-bauernhof-agriculture-black-and-white-cartoon-chariot-removebg-preview.png="imagem que representa um pesqueiro">
+        <img class="agricultura-imagem"src="png-transparent-farmer-drawing-cowboy-bauernhof-agriculture-black-and-white-cartoon-chariot-removebg-preview.png" alt="imagem que representa um pesqueiro">
     </section>
     <section class="produtos">
         <h2 class="produtos-titulo">Conheça nossos produtos?</h2>
