--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ quipamento<!DOCTYPE html>
         <img class="agricultura-imagem"src="png-transparent-farmer-drawing-cowboy-bauernhof-agriculture-black-and-white-cartoon-chariot-removebg-preview.png" alt="imagem que representa um pesqueiro">
     </section>
     <section class="alimentos">
-        <h2 class="alimento-titulo">Conheça nossos produtos?</h2>
+        <h2 class="alimento-titulo">conheça nossas produtividades?</h2>
         <div class="alimentos-todos">
         <span></span>
         <div class="alimentos-div">
