--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ quipamento<!DOCTYPE html>
         <div class="alimentos-todos">
         <span></span>
         <div class="alimentos-div">
-            <img class="alimentos-imagem" src="png-transparent-shimano-stella-sw-spinning-reel-fishing-reels-shimano-stella-fi-spinning-reel-fishing-outdoor-shoe-fishing-rods-sports-thumbnail.png" alt="foto do murinete">
+            <img class="alimentos-imagem" src="Blog-AgriQ_Agricultura_Creditos-Shutterstock.jpg" alt="foto a plantação">
             <h3 class="alimentos-nome">murinete</h3>
             
         </div>
