--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@ quipamento<!DOCTYPE html>
         <div class="alimentos-todos">
         <span></span>
         <div class="alimentos-div">
-            <img class="alimentos-imagem" src="Blog-AgriQ_Agricultura_Creditos-Shutterstock.jpg" alt="foto a plantação">
-            <h3 class="alimentos-nome">murinete</h3>
+            <img class="alimentos-imagem" src="Blog-AgriQ_Agricultura_Creditos-Shutterstock.jpg" alt="foto da plantação">
+            <h3 class="alimentos-nome">plantacao</h3>
             
         </div>
         <div class="alimentos-div">
