--- a/index.html
+++ b/index.html
@@ -31,12 +31,12 @@ quipamento<!DOCTYPE html>
         <div class="alimentos-todos">
         <span></span>
         <div class="alimentos-div">
-            <img class="alimentos-imagem" src="Blog-AgriQ_Agricultura_Creditos-Shutterstock.jpg" alt="foto da plantação">
+            <img class="alimentos-imagem" src="Blog-AgriQ_Agricultura_Creditos-Shutterstock.jpg" alt="foto da soja">
             <h3 class="alimentos-nome">plantacao</h3>
             
         </div>
         <div class="alimentos-div">
-            <img class="alimentos-imagem" src="7331b00f333354667ac19adf7e9dfb21.jpg"="foto da isca">
+            <img class="alimentos-imagem" src="png-transparent-triticale-maize-crop-plant-corn-grass-plantation-agriculture.png"="foto do milho">
             <h3 class="alimentos-nome">isca</png-transparent-fishing-tackle-fishing-baits-lures-box-angling-fishing.pngh3>
             
         </div>ante
