--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ quipamento<!DOCTYPE html>
         </div>
         <div class="alimentos-div">
             <img class="alimentos-imagem" src="png-transparent-triticale-maize-crop-plant-corn-grass-plantation-agriculture.png"="foto do milho">
-            <h3 class="alimentos-nome">isca</png-transparent-fishing-tackle-fishing-baits-lures-box-angling-fishing.pngh3>
+            <h3 class="alimentos-nome">milho</png-transparent-fishing-tackle-fishing-baits-lures-box-angling-fishing.pngh3>
             
         </div>ante
         <div class="alimentos-div">
