--- a/index.html
+++ b/index.html
@@ -32,12 +32,12 @@ quipamento<!DOCTYPE html>
         <span></span>
         <div class="alimentos-div">
             <img class="alimentos-imagem" src="Blog-AgriQ_Agricultura_Creditos-Shutterstock.jpg" alt="foto da soja">
-            <h3 class="alimentos-nome">plantacao</h3>
+            <h3 class="alimentos-nome">soja</h3>
             
         </div>
         <div class="alimentos-div">
             <img class="alimentos-imagem" src="png-transparent-triticale-maize-crop-plant-corn-grass-plantation-agriculture.png"="foto do milho">
-            <h3 class="alimentos-nome">milho</png-transparent-fishing-tackle-fishing-baits-lures-box-angling-fishing.pngh3>
+            <h3 class="alimentos-nome">milho</h3>
             
         </div>ante
         <div class="alimentos-div">
