--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@ quipamento<!DOCTYPE html>
             
         </div>ante
         <div class="alimentos-div">
-            <img class="alimentos-imagem" src="kisspng-fishing-tackle-angling-icon-fishing-png-vector-material-5aa2a23b3515e3.6978731415206078032175.jpg" alt="foto da isca">
-            <h3 class="alimentos-nome">isca</h3>
+            <img class="alimentos-imagem" src="image-4-2.png" alt="foto da plantaçao de cafe">
+            <h3 class="alimentos-nome">café</h3>
         </div>
         <span></span>
         <span></span>
