--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@ quipamento<!DOCTYPE html>
         <span></span>
         <span></span>
         <div class="alimentos-div">
-            <img class="alimentos-imagem" src="png-transparent-fishing-tackle-fishing-baits-lures-box-angling-fishing.png" alt="foto do equipamento">
-            <h3 class="alimentos-nome">equipamento</h3>
+            <img class="alimentos-imagem" src="plantio-arroz-lavoura.png" alt="foto do arroz">
+            <h3 class="alimentos-nome">arroz</h3>
            
         </div>
         <div class="alimentos-div">
