--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@ quipamento<!DOCTYPE html>
            
         </div>
         <div class="alimentos-div">
-            <img class="alimentos-imagem" src="images (3).jpeg" alt="foto do murinete">
-            <h3 class="alimentos-nome">murinete</h3>
+            <img class="alimentos-imagem" src="df9447b09671831e7330387e94de4480.png" alt="foto do plantio de banana">
+            <h3 class="alimentos-nome">banana</h3>
           
         </div>
         <div class="alimentos-div">
