--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@ quipamento<!DOCTYPE html>
           
         </div>
         <div class="alimentos-div">
-            <img class="alimentos-imagem" src="images (2).jpeg" alt="foto do equipamento">
-            <h3 class="alimentos-nome">equipamento</h3>
+            <img class="alimentos-imagem" src="epamig-trigo-cultivar-mgs-brilhante.png" alt="foto do trigo">
+            <h3 class="alimentos-nome">trigo</h3>
             <img class="alimentos-icone" src="github.png" alt="icone github">
             
         </div>
