--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@ quipamento<!DOCTYPE html>
         <span></span>
         <span></span>
         <div class="alimentos-div">
-            <img class="alimentos-imagem" src="images (1).jpeg" alt="foto da linha">
-            <h3 class="alimentos-nome">linha</h3>
+            <img class="alimentos-imagem" src="BR-cultura-do-feijao_16x9.png" alt="foto do feijão">
+            <h3 class="alimentos-nome">feijão</h3>
            
         </div>
         <div class="alimentos-div">
