--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@ quipamento<!DOCTYPE html>
            
         </div>
         <div class="alimentos-div">
-            <img class="alimentos-imagem" src="boias_lambari_para_pesca_no_8_4_9_x_3_6cm_100_pecas_13465_1_20200818094351.webp" alt="foto da boia">
-            <h3 class="alimentos-nome">boia</h3>
+            <img class="alimentos-imagem" src="image-3-705x470.png" alt="foto do abacaxi">
+            <h3 class="alimentos-nome">abacaxi</h3>
            
         </div>
 
